Atualização translations/texts/materials/shared_grassyrock.mat.json

--- a/translations/texts/materials/shared_grassyrock.mat.json
+++ b/translations/texts/materials/shared_grassyrock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Grassy Rock"
+      "Eng": "Grassy Rock",
+      "Por": "Rocha Gramada"
     }
   }
 ]
