Atualização translations/texts/materials/shared_hazard.mat.json

--- a/translations/texts/materials/shared_hazard.mat.json
+++ b/translations/texts/materials/shared_hazard.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hazard Block"
+      "Eng": "Hazard Block",
+      "Por": "Bloco de Perigo"
     }
   }
 ]
