Atualização translations/texts/materials/shared_heavyironbars.mat.json

--- a/translations/texts/materials/shared_heavyironbars.mat.json
+++ b/translations/texts/materials/shared_heavyironbars.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Heavy Iron Bars"
+      "Eng": "Heavy Iron Bars",
+      "Por": "Barras de Ferro Pesado"
     }
   }
 ]
