Atualização translations/texts/materials/shared_hellstone.mat.json

--- a/translations/texts/materials/shared_hellstone.mat.json
+++ b/translations/texts/materials/shared_hellstone.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flesh Pile"
+      "Eng": "Flesh Pile",
+      "Por": "Pilha de Carne"
     }
   }
 ]
