Atualização translations/texts/materials/shared_homewalls1.mat.json

--- a/translations/texts/materials/shared_homewalls1.mat.json
+++ b/translations/texts/materials/shared_homewalls1.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Painted Brick"
+      "Eng": "Painted Brick",
+      "Por": "Tijolo Pintado"
     }
   }
 ]
