Atualização translations/texts/materials/shared_ironblock.mat.json

--- a/translations/texts/materials/shared_ironblock.mat.json
+++ b/translations/texts/materials/shared_ironblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Iron Block"
+      "Eng": "Iron Block",
+      "Por": "Bloco de Ferro"
     }
   }
 ]
