Atualização translations/texts/materials/shared_jellyblock.mat.json

--- a/translations/texts/materials/shared_jellyblock.mat.json
+++ b/translations/texts/materials/shared_jellyblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Jelly Blob"
+      "Eng": "Jelly Blob",
+      "Por": "Gota Gelatinosa"
     }
   }
 ]
