Atualização translations/texts/materials/shared_junktech.mat.json

--- a/translations/texts/materials/shared_junktech.mat.json
+++ b/translations/texts/materials/shared_junktech.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Junk Tech"
+      "Eng": "Junk Tech",
+      "Por": "Lixo Eletrônico"
     }
   }
 ]
