Atualização translations/texts/materials/shared_ledgebrick.mat.json

--- a/translations/texts/materials/shared_ledgebrick.mat.json
+++ b/translations/texts/materials/shared_ledgebrick.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ledge Brick"
+      "Eng": "Ledge Brick",
+      "Por": "Tijolo de Parapeito"
     }
   }
 ]
