Atualização translations/texts/materials/shared_lightmetal.mat.json

--- a/translations/texts/materials/shared_lightmetal.mat.json
+++ b/translations/texts/materials/shared_lightmetal.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Light Metal"
+      "Eng": "Light Metal",
+      "Por": "Metal Leve"
     }
   }
 ]
