Atualização translations/texts/materials/shared_log.mat.json

--- a/translations/texts/materials/shared_log.mat.json
+++ b/translations/texts/materials/shared_log.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wooden Log"
+      "Eng": "Wooden Log",
+      "Por": "Tora de Madeira"
     }
   }
 ]
