Atualização translations/texts/materials/shared_lunarbaseblock.mat.json

--- a/translations/texts/materials/shared_lunarbaseblock.mat.json
+++ b/translations/texts/materials/shared_lunarbaseblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lunar Base Block"
+      "Eng": "Lunar Base Block",
+      "Por": "Bloco de Base Lunar"
     }
   }
 ]
