Atualização translations/texts/materials/shared_magmarock.mat.json

--- a/translations/texts/materials/shared_magmarock.mat.json
+++ b/translations/texts/materials/shared_magmarock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Magmarock"
+      "Eng": "Magmarock",
+      "Por": "Rocha de Magma"
     }
   }
 ]
