Atualização translations/texts/materials/shared_mediummetal.mat.json

--- a/translations/texts/materials/shared_mediummetal.mat.json
+++ b/translations/texts/materials/shared_mediummetal.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tungsten Block"
+      "Eng": "Tungsten Block",
+      "Por": "Bloco de Tungstênio"
     }
   }
 ]
