Atualização translations/texts/materials/shared_metallic.mat.json

--- a/translations/texts/materials/shared_metallic.mat.json
+++ b/translations/texts/materials/shared_metallic.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hi-tech Block"
+      "Eng": "Hi-tech Block",
+      "Por": "Bloco de Alta Tecnologia"
     }
   }
 ]
