Atualização translations/texts/materials/shared_meteoriterock.mat.json

--- a/translations/texts/materials/shared_meteoriterock.mat.json
+++ b/translations/texts/materials/shared_meteoriterock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Meteorite Rock"
+      "Eng": "Meteorite Rock",
+      "Por": "Rocha de Meteorito"
     }
   }
 ]
