Atualização translations/texts/materials/shared_mirror.mat.json

--- a/translations/texts/materials/shared_mirror.mat.json
+++ b/translations/texts/materials/shared_mirror.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mirror Block"
+      "Eng": "Mirror Block",
+      "Por": "Bloco de Espelho"
     }
   }
 ]
