Atualização translations/texts/materials/shared_neonblock.mat.json

--- a/translations/texts/materials/shared_neonblock.mat.json
+++ b/translations/texts/materials/shared_neonblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Neon Block"
+      "Eng": "Neon Block",
+      "Por": "Bloco de Néon"
     }
   }
 ]
