--- a/translations/texts/materials/shared_ornateflooring.mat.json
+++ b/translations/texts/materials/shared_ornateflooring.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ornate Flooring"
+      "Eng": "Ornate Flooring",
+      "Por": "Piso Ornamentado"
     }
   }
 ]
