Atualização translations/texts/materials/shared_ornateroofing.mat.json

--- a/translations/texts/materials/shared_ornateroofing.mat.json
+++ b/translations/texts/materials/shared_ornateroofing.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ornate Roofing"
+      "Eng": "Ornate Roofing",
+      "Por": "Telhado Ornamentado"
     }
   }
 ]
