Atualização translations/texts/materials/shared_ornatetiles.mat.json

--- a/translations/texts/materials/shared_ornatetiles.mat.json
+++ b/translations/texts/materials/shared_ornatetiles.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ornate Tiles"
+      "Eng": "Ornate Tiles",
+      "Por": "Telhas Ornamentadas"
     }
   }
 ]
