--- a/translations/texts/materials/shared_ornatewall.mat.json
+++ b/translations/texts/materials/shared_ornatewall.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ornate Wall"
+      "Eng": "Ornate Wall",
+      "Por": "Parede Ornamentada"
     }
   }
 ]
