Atualização translations/texts/materials/shared_ornatewood.mat.json

--- a/translations/texts/materials/shared_ornatewood.mat.json
+++ b/translations/texts/materials/shared_ornatewood.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ornate Wood"
+      "Eng": "Ornate Wood",
+      "Por": "Madeira Ornamentada"
     }
   }
 ]
