Atualização translations/texts/materials/shared_outpost.mat.json

--- a/translations/texts/materials/shared_outpost.mat.json
+++ b/translations/texts/materials/shared_outpost.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Outpost Wall"
+      "Eng": "Outpost Wall",
+      "Por": "Parede de Posto Avançado"
     }
   }
 ]
