Atualização translations/texts/materials/shared_outpostsupport.mat.json

--- a/translations/texts/materials/shared_outpostsupport.mat.json
+++ b/translations/texts/materials/shared_outpostsupport.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Outpost Support Beam"
+      "Eng": "Outpost Support Beam",
+      "Por": "Viga de Suporte de Posto Avançado"
     }
   }
 ]
