Atualização translations/texts/materials/shared_outpostwall.json

--- a/translations/texts/materials/shared_outpostwall.json
+++ b/translations/texts/materials/shared_outpostwall.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Outpost Concrete"
+      "Eng": "Outpost Concrete",
+      "Por": "Concreto de Posto Avançado"
     }
   }
 ]
