Atualização translations/texts/materials/shared_outpostwall2.mat.json

--- a/translations/texts/materials/shared_outpostwall2.mat.json
+++ b/translations/texts/materials/shared_outpostwall2.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Outpost Thick Wall"
+      "Eng": "Outpost Thick Wall",
+      "Por": "Parede Grossa de Posto Avançado"
     }
   }
 ]
