Atualização translations/texts/materials/shared_packeddirt.mat.json

--- a/translations/texts/materials/shared_packeddirt.mat.json
+++ b/translations/texts/materials/shared_packeddirt.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Packed Dirt"
+      "Eng": "Packed Dirt",
+      "Por": "Terra Comprimida"
     }
   }
 ]
