Atualização translations/texts/materials/shared_pillarblock.mat.json

--- a/translations/texts/materials/shared_pillarblock.mat.json
+++ b/translations/texts/materials/shared_pillarblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pillar Block"
+      "Eng": "Pillar Block",
+      "Por": "Bloco de Pilar"
     }
   }
 ]
