Atualização translations/texts/materials/shared_plantblock.mat.json

--- a/translations/texts/materials/shared_plantblock.mat.json
+++ b/translations/texts/materials/shared_plantblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plant Block"
+      "Eng": "Plant Block",
+      "Por": "Bloco de Planta"
     }
   }
 ]
