Atualização translations/texts/materials/shared_plantmatter.mat.json

--- a/translations/texts/materials/shared_plantmatter.mat.json
+++ b/translations/texts/materials/shared_plantmatter.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plant Matter"
+      "Eng": "Plant Matter",
+      "Por": "Matéria Vegetal"
     }
   }
 ]
