Atualização translations/texts/materials/shared_plate.mat.json

--- a/translations/texts/materials/shared_plate.mat.json
+++ b/translations/texts/materials/shared_plate.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Smooth Plated Block"
+      "Eng": "Smooth Plated Block",
+      "Por": "Bloco Chapeado Suave"
     }
   }
 ]
