Atualização translations/texts/materials/shared_platinumblock.mat.json

--- a/translations/texts/materials/shared_platinumblock.mat.json
+++ b/translations/texts/materials/shared_platinumblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Platinum Block"
+      "Eng": "Platinum Block",
+      "Por": "Bloco de Platina"
     }
   }
 ]
