Atualização translations/texts/materials/shared_pressurisedbeam.mat.json

--- a/translations/texts/materials/shared_pressurisedbeam.mat.json
+++ b/translations/texts/materials/shared_pressurisedbeam.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pressurised Beam"
+      "Eng": "Pressurised Beam",
+      "Por": "Viga Pressurizada"
     }
   }
 ]
