Atualização translations/texts/materials/shared_pressuriseddurasteel.mat.json

--- a/translations/texts/materials/shared_pressuriseddurasteel.mat.json
+++ b/translations/texts/materials/shared_pressuriseddurasteel.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pressurised Durasteel"
+      "Eng": "Pressurised Durasteel",
+      "Por": "Duraço Pressurizado"
     }
   }
 ]
