Atualização translations/texts/materials/shared_purplecrystal.mat.json

--- a/translations/texts/materials/shared_purplecrystal.mat.json
+++ b/translations/texts/materials/shared_purplecrystal.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Purple Crystal Block"
+      "Eng": "Purple Crystal Block",
+      "Por": "Bloco de Cristal Roxo"
     }
   }
 ]
