Atualização translations/texts/materials/shared_rainbowwoodblock.mat.json

--- a/translations/texts/materials/shared_rainbowwoodblock.mat.json
+++ b/translations/texts/materials/shared_rainbowwoodblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rainbow Wood Planks"
+      "Eng": "Rainbow Wood Planks",
+      "Por": "Pranchas de Madeira Arco-íris"
     }
   }
 ]
