Atualização translations/texts/materials/shared_redtoyblock.mat.json

--- a/translations/texts/materials/shared_redtoyblock.mat.json
+++ b/translations/texts/materials/shared_redtoyblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Red Toy Block"
+      "Eng": "Red Toy Block",
+      "Por": "Bloco de Brinquedo Vermelho"
     }
   }
 ]
