Atualização translations/texts/materials/shared_reed.json

--- a/translations/texts/materials/shared_reed.json
+++ b/translations/texts/materials/shared_reed.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Reed Block"
+      "Eng": "Reed Block",
+      "Por": "Bloco de Junco"
     }
   }
 ]
