Atualização translations/texts/materials/shared_ridgebrick.mat.json

--- a/translations/texts/materials/shared_ridgebrick.mat.json
+++ b/translations/texts/materials/shared_ridgebrick.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ridged Block"
+      "Eng": "Ridged Block",
+      "Por": "Bloco Estriado"
     }
   }
 ]
