Atualização translations/texts/materials/shared_rock.json

--- a/translations/texts/materials/shared_rock.json
+++ b/translations/texts/materials/shared_rock.json
@@ -58,7 +58,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rough Stone"
+      "Eng": "Rough Stone",
+      "Por": "Bloco Áspero"
     }
   }
 ]
