Atualização translations/texts/materials/shared_rockbrick.mat.json

--- a/translations/texts/materials/shared_rockbrick.mat.json
+++ b/translations/texts/materials/shared_rockbrick.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rock Bricks"
+      "Eng": "Rock Bricks",
+      "Por": "Tijolos de Pedra"
     }
   }
 ]
