Atualização translations/texts/materials/shared_rustyblock.mat.json

--- a/translations/texts/materials/shared_rustyblock.mat.json
+++ b/translations/texts/materials/shared_rustyblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rusty Block"
+      "Eng": "Rusty Block",
+      "Por": "Bloco Enferrujado"
     }
   }
 ]
