Atualização translations/texts/materials/shared_rustymetal.mat.json

--- a/translations/texts/materials/shared_rustymetal.mat.json
+++ b/translations/texts/materials/shared_rustymetal.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rusty Metal"
+      "Eng": "Rusty Metal",
+      "Por": "Metal Enferrujado"
     }
   }
 ]
