--- a/translations/texts/materials/shared_sandstoneblock.mat.json
+++ b/translations/texts/materials/shared_sandstoneblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sandstone Bricks"
+      "Eng": "Sandstone Bricks",
+      "Por": "Tijolos de Arenito"
     }
   }
 ]
