Atualização translations/texts/materials/shared_sewage.mat.json

--- a/translations/texts/materials/shared_sewage.mat.json
+++ b/translations/texts/materials/shared_sewage.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Raw Sewage"
+      "Eng": "Raw Sewage",
+      "Por": "Esgoto Bruto"
     }
   }
 ]
