Atualização translations/texts/materials/shared_sewerpipe.mat.json

--- a/translations/texts/materials/shared_sewerpipe.mat.json
+++ b/translations/texts/materials/shared_sewerpipe.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sewer Pipe"
+      "Eng": "Sewer Pipe",
+      "Por": "Cano de Esgoto"
     }
   }
 ]
