Atualização translations/texts/materials/shared_shadowblock.mat.json

--- a/translations/texts/materials/shared_shadowblock.mat.json
+++ b/translations/texts/materials/shared_shadowblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shadow Rock"
+      "Eng": "Shadow Rock",
+      "Por": "Rocha Sombria"
     }
   }
 ]
