Atualização translations/texts/materials/shared_shadowspikeblock.mat.json

--- a/translations/texts/materials/shared_shadowspikeblock.mat.json
+++ b/translations/texts/materials/shared_shadowspikeblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shadow Spike Block"
+      "Eng": "Shadow Spike Block",
+      "Por": "Rocha Sombria Pontuda"
     }
   }
 ]
