Atualização translations/texts/materials/shared_shadowwallblock.mat.json

--- a/translations/texts/materials/shared_shadowwallblock.mat.json
+++ b/translations/texts/materials/shared_shadowwallblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shadow Bricks"
+      "Eng": "Shadow Bricks",
+      "Por": "Tijolos de Rocha Sombria"
     }
   }
 ]
