Atualização translations/texts/materials/shared_shojiscreenpanel.mat.json

--- a/translations/texts/materials/shared_shojiscreenpanel.mat.json
+++ b/translations/texts/materials/shared_shojiscreenpanel.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shoji Screen Panel"
+      "Eng": "Shoji Screen Panel",
+      "Por": "Painel de Tela Shoji"
     }
   }
 ]
