Atualização translations/texts/materials/shared_shroomblock.mat.json

--- a/translations/texts/materials/shared_shroomblock.mat.json
+++ b/translations/texts/materials/shared_shroomblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mushroom Block"
+      "Eng": "Mushroom Block",
+      "Por": "Bloco de Cogumelo"
     }
   }
 ]
