Atualização translations/texts/materials/shared_silverblock.mat.json

--- a/translations/texts/materials/shared_silverblock.mat.json
+++ b/translations/texts/materials/shared_silverblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Silver Block"
+      "Eng": "Silver Block",
+      "Por": "Bloco de Prata"
     }
   }
 ]
