Atualização translations/texts/materials/shared_silverscrew.mat.json

--- a/translations/texts/materials/shared_silverscrew.mat.json
+++ b/translations/texts/materials/shared_silverscrew.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Silver Screw"
+      "Eng": "Silver Screw",
+      "Por": "Parafuso de Prata"
     }
   }
 ]
