Atualização translations/texts/materials/shared_slime.mat.json

--- a/translations/texts/materials/shared_slime.mat.json
+++ b/translations/texts/materials/shared_slime.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Slime Glob"
+      "Eng": "Slime Glob",
+      "Por": "Globo de Lodo"
     }
   }
 ]
