--- a/translations/texts/materials/shared_slopedhullpanel.mat.json
+++ b/translations/texts/materials/shared_slopedhullpanel.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hull Panel"
+      "Eng": "Hull Panel",
+      "Por": "Painel de Casco"
     }
   }
 ]
