Atualização translations/texts/materials/shared_slopedinsetpanel.mat.json

--- a/translations/texts/materials/shared_slopedinsetpanel.mat.json
+++ b/translations/texts/materials/shared_slopedinsetpanel.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Inset Panel"
+      "Eng": "Inset Panel",
+      "Por": "Painel de Inserção"
     }
   }
 ]
