Atualização translations/texts/materials/shared_slopedrustypanel.mat.json

--- a/translations/texts/materials/shared_slopedrustypanel.mat.json
+++ b/translations/texts/materials/shared_slopedrustypanel.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rusty Panel"
+      "Eng": "Rusty Panel",
+      "Por": "Painel Enferrujado"
     }
   }
 ]
