Atualização translations/texts/materials/shared_slopedscrappanel.mat.json

--- a/translations/texts/materials/shared_slopedscrappanel.mat.json
+++ b/translations/texts/materials/shared_slopedscrappanel.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Scrap Panel"
+      "Eng": "Scrap Panel",
+      "Por": "Painel de Sucata"
     }
   }
 ]
