Atualização translations/texts/materials/shared_smoothmetal.mat.json

--- a/translations/texts/materials/shared_smoothmetal.mat.json
+++ b/translations/texts/materials/shared_smoothmetal.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Smooth Metal"
+      "Eng": "Smooth Metal",
+      "Por": "Metal Liso"
     }
   }
 ]
