--- a/translations/texts/materials/shared_spidersilkblock.mat.json
+++ b/translations/texts/materials/shared_spidersilkblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spider Silk"
+      "Eng": "Spider Silk",
+      "Por": "Seda de Aranha"
     }
   }
 ]
