Atualização translations/texts/materials/shared_stomachblock.mat.json

--- a/translations/texts/materials/shared_stomachblock.mat.json
+++ b/translations/texts/materials/shared_stomachblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stomach Lining"
+      "Eng": "Stomach Lining",
+      "Por": "Forro de Estômago"
     }
   }
 ]
