Atualização translations/texts/materials/shared_stonerubble.mat.json

--- a/translations/texts/materials/shared_stonerubble.mat.json
+++ b/translations/texts/materials/shared_stonerubble.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stone Rubble"
+      "Eng": "Stone Rubble",
+      "Por": "Escombro de Pedra"
     }
   }
 ]
