Atualização translations/texts/materials/shared_stonetiles.mat.json

--- a/translations/texts/materials/shared_stonetiles.mat.json
+++ b/translations/texts/materials/shared_stonetiles.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stone Tiles"
+      "Eng": "Stone Tiles",
+      "Por": "Azulejos de Pedra"
     }
   }
 ]
