Atualização translations/texts/materials/shared_supermatter.mat.json

--- a/translations/texts/materials/shared_supermatter.mat.json
+++ b/translations/texts/materials/shared_supermatter.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Erchius Crystal"
+      "Eng": "Erchius Crystal",
+      "Por": "Cristal Erchius"
     }
   }
 ]
