Atualização translations/texts/materials/shared_techhull1.mat.json

--- a/translations/texts/materials/shared_techhull1.mat.json
+++ b/translations/texts/materials/shared_techhull1.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Reinforced Tech Block"
+      "Eng": "Reinforced Tech Block",
+      "Por": "Bloco Tecnológico Reforçado"
     }
   }
 ]
