Atualização translations/texts/materials/shared_temple1.mat.json

--- a/translations/texts/materials/shared_temple1.mat.json
+++ b/translations/texts/materials/shared_temple1.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Temple Block"
+      "Eng": "Temple Block",
+      "Por": "Bloco de Templo"
     }
   }
 ]
