Atualização translations/texts/materials/shared_temple2.mat.json

--- a/translations/texts/materials/shared_temple2.mat.json
+++ b/translations/texts/materials/shared_temple2.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Temple Bricks"
+      "Eng": "Temple Bricks",
+      "Por": "Tijolos de Templo"
     }
   }
 ]
