Atualização translations/texts/materials/shared_temple3.mat.json

--- a/translations/texts/materials/shared_temple3.mat.json
+++ b/translations/texts/materials/shared_temple3.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Small Temple Bricks"
+      "Eng": "Small Temple Bricks",
+      "Por": "Tijolos Pequenos de Templo"
     }
   }
 ]
