Atualização translations/texts/materials/shared_temple4.mat.json

--- a/translations/texts/materials/shared_temple4.mat.json
+++ b/translations/texts/materials/shared_temple4.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Simple Temple Blocks"
+      "Eng": "Simple Temple Blocks",
+      "Por": "Blocos de Templo Simples"
     }
   }
 ]
