Atualização translations/texts/materials/shared_tentacleblock.mat.json

--- a/translations/texts/materials/shared_tentacleblock.mat.json
+++ b/translations/texts/materials/shared_tentacleblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tentacle Cluster"
+      "Eng": "Tentacle Cluster",
+      "Por": "Grupo de Tentáculos"
     }
   }
 ]
