--- a/translations/texts/materials/shared_tentaclepipe.mat.json
+++ b/translations/texts/materials/shared_tentaclepipe.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Large Tentacle"
+      "Eng": "Large Tentacle",
+      "Por": "Tentáculo Grande"
     }
   }
 ]
