Atualização translations/texts/materials/shared_tombbrick.mat.json

--- a/translations/texts/materials/shared_tombbrick.mat.json
+++ b/translations/texts/materials/shared_tombbrick.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tomb Brick"
+      "Eng": "Tomb Brick",
+      "Por": "Tijolo de Tumba"
     }
   }
 ]
