Atualização translations/texts/materials/shared_tombbrick2.mat.json

--- a/translations/texts/materials/shared_tombbrick2.mat.json
+++ b/translations/texts/materials/shared_tombbrick2.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Unmarked Tomb Brick"
+      "Eng": "Unmarked Tomb Brick",
+      "Por": "Tijolo de Tumba Sem Marca"
     }
   }
 ]
