Atualização translations/texts/materials/shared_tombbrick3.mat.json

--- a/translations/texts/materials/shared_tombbrick3.mat.json
+++ b/translations/texts/materials/shared_tombbrick3.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Small Tomb Brick"
+      "Eng": "Small Tomb Brick",
+      "Por": "Tijolo Pequeno de Tumba"
     }
   }
 ]
