Atualização translations/texts/materials/shared_tombbrick4.mat.json

--- a/translations/texts/materials/shared_tombbrick4.mat.json
+++ b/translations/texts/materials/shared_tombbrick4.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dark Tomb Brick"
+      "Eng": "Dark Tomb Brick",
+      "Por": "Tijolo de Tumba Escuro"
     }
   }
 ]
