Atualização translations/texts/materials/shared_tombbrick5.mat.json

--- a/translations/texts/materials/shared_tombbrick5.mat.json
+++ b/translations/texts/materials/shared_tombbrick5.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Smooth Tomb Brick"
+      "Eng": "Smooth Tomb Brick",
+      "Por": "Tijolo de Tumba Liso"
     }
   }
 ]
