Atualização translations/texts/materials/shared_treasurehoard.mat.json

--- a/translations/texts/materials/shared_treasurehoard.mat.json
+++ b/translations/texts/materials/shared_treasurehoard.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Treasure Hoard"
+      "Eng": "Treasure Hoard",
+      "Por": "Pilha de Tesouro"
     }
   }
 ]
