Atualização translations/texts/materials/shared_wallpaper.mat.json

--- a/translations/texts/materials/shared_wallpaper.mat.json
+++ b/translations/texts/materials/shared_wallpaper.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Classic Wallpaper"
+      "Eng": "Classic Wallpaper",
+      "Por": "Papel de Parede Clássico"
     }
   }
 ]
