Atualização translations/texts/materials/shared_wickersupport.mat.json

--- a/translations/texts/materials/shared_wickersupport.mat.json
+++ b/translations/texts/materials/shared_wickersupport.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wicker Support Block"
+      "Eng": "Wicker Support Block",
+      "Por": "Bloco de Suporte de Vime"
     }
   }
 ]
