Atualização translations/texts/materials/shared_woodbridge.mat.json

--- a/translations/texts/materials/shared_woodbridge.mat.json
+++ b/translations/texts/materials/shared_woodbridge.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wooden Bridge Block"
+      "Eng": "Wooden Bridge Block",
+      "Por": "Bloco de Ponte de Madeira"
     }
   }
 ]
