Atualização translations/texts/materials/shared_woodenwindow1.mat.json

--- a/translations/texts/materials/shared_woodenwindow1.mat.json
+++ b/translations/texts/materials/shared_woodenwindow1.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wooden Window"
+      "Eng": "Wooden Window",
+      "Por": "Janela de Madeira"
     }
   }
 ]
