Atualização translations/texts/materials/shared_woodenwindow2.mat.json

--- a/translations/texts/materials/shared_woodenwindow2.mat.json
+++ b/translations/texts/materials/shared_woodenwindow2.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wooden Blinds"
+      "Eng": "Wooden Blinds",
+      "Por": "Persianas de Madeira"
     }
   }
 ]
