Atualização translations/texts/materials/shared_woodpanelling.mat.json

--- a/translations/texts/materials/shared_woodpanelling.mat.json
+++ b/translations/texts/materials/shared_woodpanelling.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wood Panelling"
+      "Eng": "Wood Panelling",
+      "Por": "Painéis de Madeira"
     }
   }
 ]
