Atualização translations/texts/plants/bushes/alien/alienbush.bush.json

--- a/translations/texts/plants/bushes/alien/alienbush.bush.json
+++ b/translations/texts/plants/bushes/alien/alienbush.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Bush"
+      "Eng": "Alien Bush",
+      "Por": "Arbusto Alienígena"
     }
   }
 ]
