--- a/translations/texts/plants/bushes/ceiling/ceilingbones/ceilingbones.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingbones/ceilingbones.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hanging bones."
+      "Eng": "Hanging bones.",
+      "Por": "Ossos pendurados."
     }
   }
 ]
