--- a/translations/texts/plants/bushes/ceiling/ceilingarchrock/ceilingarchrock.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingarchrock/ceilingarchrock.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "An arched rock."
+      "Eng": "An arched rock.",
+      "Por": "Uma rocha arqueada."
     }
   }
 ]
