Atualização translations/texts/plants/bushes/ceiling/ceilingbuglike/ceilingbuglike.bush.json

--- a/translations/texts/plants/bushes/ceiling/ceilingbuglike/ceilingbuglike.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingbuglike/ceilingbuglike.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A weird protrusion."
+      "Eng": "A weird protrusion.",
+      "Por": "Uma protuberância estranha."
     }
   }
 ]
