--- a/translations/texts/plants/bushes/ceiling/ceilingeye/ceilingeye.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingeye/ceilingeye.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A grotesque hanging eye."
+      "Eng": "A grotesque hanging eye.",
+      "Por": "Um olho pendurado grotesco."
     }
   }
 ]
