Atualização translations/texts/plants/bushes/ceiling/ceilingflesh/ceilingflesh.bush.json

--- a/translations/texts/plants/bushes/ceiling/ceilingflesh/ceilingflesh.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingflesh/ceilingflesh.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A quivering lump of flesh."
+      "Eng": "A quivering lump of flesh.",
+      "Por": "Um pedaço trêmulo de carne."
     }
   }
 ]
