--- a/translations/texts/plants/bushes/ceiling/ceilinggrub/ceilinggrub.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilinggrub/ceilinggrub.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Some kind of vile grub."
+      "Eng": "Some kind of vile grub.",
+      "Por": "Algum tipo de verme mau."
     }
   }
 ]
