Atualização translations/texts/plants/bushes/ceiling/ceilingiceblocks/ceilingiceblocks.bush.json

--- a/translations/texts/plants/bushes/ceiling/ceilingiceblocks/ceilingiceblocks.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingiceblocks/ceilingiceblocks.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hanging ice blocks."
+      "Eng": "Hanging ice blocks.",
+      "Por": "Blocos de gelo suspensos."
     }
   }
 ]
