--- a/translations/texts/plants/bushes/ceiling/ceilingicepolys/ceilingicepolys.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingicepolys/ceilingicepolys.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hanging ice shards."
+      "Eng": "Hanging ice shards.",
+      "Por": "Pedaços de gelo suspensos."
     }
   }
 ]
