--- a/translations/texts/plants/bushes/ceiling/ceilingicespikes/ceilingicespikes.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingicespikes/ceilingicespikes.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hanging ice spikes."
+      "Eng": "Hanging ice spikes.",
+      "Por": "Espinhos de gelo suspensos."
     }
   }
 ]
