Atualização translations/texts/plants/bushes/ceiling/ceilingmagmapods/ceilingmagmapods.bush.json

--- a/translations/texts/plants/bushes/ceiling/ceilingmagmapods/ceilingmagmapods.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingmagmapods/ceilingmagmapods.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hanging magma rock."
+      "Eng": "Hanging magma rock.",
+      "Por": "Rocha de magma suspensa."
     }
   }
 ]
