Atualização translations/texts/plants/bushes/ceiling/ceilingsandspikes/ceilingsandspikes.bush.json

--- a/translations/texts/plants/bushes/ceiling/ceilingsandspikes/ceilingsandspikes.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingsandspikes/ceilingsandspikes.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sandy spikes."
+      "Eng": "Sandy spikes.",
+      "Por": "Espinhos de areia."
     }
   }
 ]
