Atualização translations/texts/plants/bushes/ceiling/ceilingspiralrocks/ceilingspiralrocks.bush.json

--- a/translations/texts/plants/bushes/ceiling/ceilingspiralrocks/ceilingspiralrocks.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingspiralrocks/ceilingspiralrocks.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spiral rocks."
+      "Eng": "Spiral rocks.",
+      "Por": "Rochas espirais."
     }
   }
 ]
