--- a/translations/texts/plants/bushes/ceiling/ceilingstalactite/ceilingstalactite.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingstalactite/ceilingstalactite.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rock Stalactite."
+      "Eng": "Rock Stalactite.",
+      "Por": "Rocha de Estalactite."
     }
   }
 ]
