--- a/translations/texts/plants/bushes/ceiling/ceilingtardrip/ceilingtardrip.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingtardrip/ceilingtardrip.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dripping tar."
+      "Eng": "Dripping tar.",
+      "Por": "Goteira de piche."
     }
   }
 ]
