--- a/translations/texts/plants/bushes/ceiling/ceilingthinice/ceilingthinice.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingthinice/ceilingthinice.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Thin icicles."
+      "Eng": "Thin icicles.",
+      "Por": "Estalactites finas."
     }
   }
 ]
