--- a/translations/texts/plants/bushes/ceiling/ceilingthinspiral/ceilingthinspiral.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingthinspiral/ceilingthinspiral.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Thin spiral rock."
+      "Eng": "Thin spiral rock.",
+      "Por": "Rocha espiral fina."
     }
   }
 ]
