--- a/translations/texts/plants/bushes/ceiling/ceilingwicked/ceilingwicked.bush.json
+++ b/translations/texts/plants/bushes/ceiling/ceilingwicked/ceilingwicked.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hanging roots."
+      "Eng": "Hanging roots.",
+      "Por": "Raízes suspensas."
     }
   }
 ]
