Atualização translations/texts/plants/bushes/ceiling/shared_ceiling/shared_ceiling.json

--- a/translations/texts/plants/bushes/ceiling/shared_ceiling/shared_ceiling.json
+++ b/translations/texts/plants/bushes/ceiling/shared_ceiling/shared_ceiling.json
@@ -13,7 +13,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hanging desert rocks."
+      "Eng": "Hanging desert rocks.",
+      "Por": "Pedras do deserto suspensas."
     }
   }
 ]
