--- a/translations/texts/plants/bushes/ground/alpinestone/alpinestone.bush.json
+++ b/translations/texts/plants/bushes/ground/alpinestone/alpinestone.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A pile of mossy stones."
+      "Eng": "A pile of mossy stones.",
+      "Por": "Uma pilha de pedras cobertas de musgo."
     }
   }
 ]
