--- a/translations/texts/plants/bushes/ground/bioroots/bioroots.bush.json
+++ b/translations/texts/plants/bushes/ground/bioroots/bioroots.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Some curling roots."
+      "Eng": "Some curling roots.",
+      "Por": "Algumas raízes enroladas."
     }
   }
 ]
