--- a/translations/texts/plants/bushes/ground/desertrocks/desertrocks.bush.json
+++ b/translations/texts/plants/bushes/ground/desertrocks/desertrocks.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Desert rocks."
+      "Eng": "Desert rocks.",
+      "Por": "Rochas do deserto."
     }
   }
 ]
