--- a/translations/texts/plants/bushes/ground/eyebush/eyebush.bush.json
+++ b/translations/texts/plants/bushes/ground/eyebush/eyebush.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A horrifying eyeball."
+      "Eng": "A horrifying eyeball.",
+      "Por": "Um globo ocular horripilante."
     }
   }
 ]
