--- a/translations/texts/plants/bushes/ground/fleshbonebush/fleshbonebush.bush.json
+++ b/translations/texts/plants/bushes/ground/fleshbonebush/fleshbonebush.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Horrifying bones."
+      "Eng": "Horrifying bones.",
+      "Por": "Ossos horripilantes."
     }
   }
 ]
