--- a/translations/texts/plants/bushes/ground/fleshcorpse/fleshcorpse.bush.json
+++ b/translations/texts/plants/bushes/ground/fleshcorpse/fleshcorpse.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A vile corpse."
+      "Eng": "A vile corpse.",
+      "Por": "Um cadáver desagradável."
     }
   }
 ]
