Atualização translations/texts/plants/bushes/ground/glowbush/glowbush.bush.json

--- a/translations/texts/plants/bushes/ground/glowbush/glowbush.bush.json
+++ b/translations/texts/plants/bushes/ground/glowbush/glowbush.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A gross, fleshy protrusion."
+      "Eng": "A gross, fleshy protrusion.",
+      "Por": "Uma protuberância nojenta e carnuda."
     }
   }
 ]
