--- a/translations/texts/plants/bushes/ground/happybush/happybush.bush.json
+++ b/translations/texts/plants/bushes/ground/happybush/happybush.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A pleasant bush."
+      "Eng": "A pleasant bush.",
+      "Por": "Um arbusto agradável."
     }
   }
 ]
