--- a/translations/texts/plants/bushes/ground/lavabowl/lavabowl.bush.json
+++ b/translations/texts/plants/bushes/ground/lavabowl/lavabowl.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A natural lava bowl."
+      "Eng": "A natural lava bowl.",
+      "Por": "Uma poça de lava natural."
     }
   }
 ]
