--- a/translations/texts/plants/bushes/ground/magmapitcher/magmapitcher.bush.json
+++ b/translations/texts/plants/bushes/ground/magmapitcher/magmapitcher.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cones filled with magma."
+      "Eng": "Cones filled with magma.",
+      "Por": "Cones cheios de magma."
     }
   }
 ]
