Atualização translations/texts/plants/bushes/ground/midnightstone/midnightstone.bush.json

--- a/translations/texts/plants/bushes/ground/midnightstone/midnightstone.bush.json
+++ b/translations/texts/plants/bushes/ground/midnightstone/midnightstone.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Weathered stones."
+      "Eng": "Weathered stones.",
+      "Por": "Pedras resistidas."
     }
   }
 ]
