Atualização translations/texts/plants/bushes/ground/moltenbones/moltenbones.bush.json

--- a/translations/texts/plants/bushes/ground/moltenbones/moltenbones.bush.json
+++ b/translations/texts/plants/bushes/ground/moltenbones/moltenbones.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Charcoaled bones."
+      "Eng": "Charcoaled bones.",
+      "Por": "Ossos ao carvão."
     }
   }
 ]
