--- a/translations/texts/plants/bushes/ground/moltenrock/moltenrock.bush.json
+++ b/translations/texts/plants/bushes/ground/moltenrock/moltenrock.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Molten rock."
+      "Eng": "Molten rock.",
+      "Por": "Rocha fundida."
     }
   }
 ]
