--- a/translations/texts/plants/bushes/ground/sandstoneplant/sandstoneplant.bush.json
+++ b/translations/texts/plants/bushes/ground/sandstoneplant/sandstoneplant.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A sandy shrub."
+      "Eng": "A sandy shrub.",
+      "Por": "Um arbusto arenoso."
     }
   }
 ]
