--- a/translations/texts/plants/bushes/ground/savannahbush/savannahbush.bush.json
+++ b/translations/texts/plants/bushes/ground/savannahbush/savannahbush.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A brittle, dead bush."
+      "Eng": "A brittle, dead bush.",
+      "Por": "Um arbusto frágil e morto."
     }
   }
 ]
