--- a/translations/texts/plants/bushes/ground/savannahgreenbush/savannahgreenbush.bush.json
+++ b/translations/texts/plants/bushes/ground/savannahgreenbush/savannahgreenbush.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A brittle, dry bush."
+      "Eng": "A brittle, dry bush.",
+      "Por": "Um arbusto seco e quebradiço."
     }
   }
 ]
