Atualização translations/texts/plants/bushes/ground/shared_iceb/shared_.bush.json

--- a/translations/texts/plants/bushes/ground/shared_iceb/shared_.bush.json
+++ b/translations/texts/plants/bushes/ground/shared_iceb/shared_.bush.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A block of ice."
+      "Eng": "A block of ice.",
+      "Por": "Um bloco de gelo."
     }
   }
 ]
