Atualização translations/texts/plants/bushes/ground/shared_snow/shared_.bush.json

--- a/translations/texts/plants/bushes/ground/shared_snow/shared_.bush.json
+++ b/translations/texts/plants/bushes/ground/shared_snow/shared_.bush.json
@@ -13,7 +13,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A snow-covered bush."
+      "Eng": "A snow-covered bush.",
+      "Por": "Um arbusto coberto de neve."
     }
   }
 ]
