--- a/translations/texts/plants/bushes/ground/slimebush/slimebush.bush.json
+++ b/translations/texts/plants/bushes/ground/slimebush/slimebush.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A slimy bush."
+      "Eng": "A slimy bush.",
+      "Por": "Um arbusto viscoso."
     }
   }
 ]
