--- a/translations/texts/plants/bushes/ground/stonestack/stonestack.bush.json
+++ b/translations/texts/plants/bushes/ground/stonestack/stonestack.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A pile of stones."
+      "Eng": "A pile of stones.",
+      "Por": "Uma pilha de pedras."
     }
   }
 ]
