--- a/translations/texts/plants/bushes/ground/swampbush/swampbush.bush.json
+++ b/translations/texts/plants/bushes/ground/swampbush/swampbush.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A swampy bush."
+      "Eng": "A swampy bush.",
+      "Por": "Um arbusto pantanoso."
     }
   }
 ]
