Atualização translations/texts/plants/bushes/ground/swampplant/swampplant.bush.json

--- a/translations/texts/plants/bushes/ground/swampplant/swampplant.bush.json
+++ b/translations/texts/plants/bushes/ground/swampplant/swampplant.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A swampy plant."
+      "Eng": "A swampy plant.",
+      "Por": "Uma planta pantanosa."
     }
   }
 ]
