--- a/translations/texts/plants/bushes/ground/swampshrub/swampshrub.bush.json
+++ b/translations/texts/plants/bushes/ground/swampshrub/swampshrub.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A swampy shrub."
+      "Eng": "A swampy shrub.",
+      "Por": "Um arbusto pantanoso."
     }
   }
 ]
