--- a/translations/texts/plants/bushes/ground/tarbulb/tarbulb.bush.json
+++ b/translations/texts/plants/bushes/ground/tarbulb/tarbulb.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A glob of tar."
+      "Eng": "A glob of tar.",
+      "Por": "Uma bola de piche."
     }
   }
 ]
