--- a/translations/texts/plants/bushes/ground/tarcrystal/tarcrystal.bush.json
+++ b/translations/texts/plants/bushes/ground/tarcrystal/tarcrystal.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Crystallised tar."
+      "Eng": "Crystallised tar.",
+      "Por": "Piche cristalizado."
     }
   }
 ]
