--- a/translations/texts/plants/bushes/ground/tendonbush/tendonbush.bush.json
+++ b/translations/texts/plants/bushes/ground/tendonbush/tendonbush.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A grotesque piece of flesh."
+      "Eng": "A grotesque piece of flesh.",
+      "Por": "Um pedaço grotesco de carne."
     }
   }
 ]
