--- a/translations/texts/plants/bushes/ground/tendonlight/tendonlight.bush.json
+++ b/translations/texts/plants/bushes/ground/tendonlight/tendonlight.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A glowing piece of flesh."
+      "Eng": "A glowing piece of flesh.",
+      "Por": "Um pedaço brilhante de carne."
     }
   }
 ]
