Atualização translations/texts/plants/bushes/ground/tentacleshrub/tentacleshrub.bush.json

--- a/translations/texts/plants/bushes/ground/tentacleshrub/tentacleshrub.bush.json
+++ b/translations/texts/plants/bushes/ground/tentacleshrub/tentacleshrub.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A grotesque tentacle."
+      "Eng": "A grotesque tentacle.",
+      "Por": "Um tentáculo grotesco."
     }
   }
 ]
