--- a/translations/texts/plants/bushes/ground/testbush2/testbush2.bush.json
+++ b/translations/texts/plants/bushes/ground/testbush2/testbush2.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A blackened shrub."
+      "Eng": "A blackened shrub.",
+      "Por": "Um arbusto escuro."
     }
   }
 ]
