--- a/translations/texts/plants/bushes/ground/thorns/thorns.bush.json
+++ b/translations/texts/plants/bushes/ground/thorns/thorns.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A thorn bush."
+      "Eng": "A thorn bush.",
+      "Por": "Um arbusto espinhoso."
     }
   }
 ]
