Atualização translations/texts/plants/bushes/ground/toxic/toxiccreep.bush.json

--- a/translations/texts/plants/bushes/ground/toxic/toxiccreep.bush.json
+++ b/translations/texts/plants/bushes/ground/toxic/toxiccreep.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A mutated plant."
+      "Eng": "A mutated plant.",
+      "Por": "Uma planta mutante."
     }
   }
 ]
