--- a/translations/texts/plants/bushes/ground/wicked/wicked.bush.json
+++ b/translations/texts/plants/bushes/ground/wicked/wicked.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A dead shrub."
+      "Eng": "A dead shrub.",
+      "Por": "Um arbusto morto."
     }
   }
 ]
