--- a/translations/texts/plants/bushes/groundocean/seabush/cone.bush.json
+++ b/translations/texts/plants/bushes/groundocean/seabush/cone.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cone bush."
+      "Eng": "Cone bush.",
+      "Por": "Arbusto em cone."
     }
   }
 ]
