Atualização translations/texts/plants/bushes/groundocean/toxicseabush/toxiccone.bush.json

--- a/translations/texts/plants/bushes/groundocean/toxicseabush/toxiccone.bush.json
+++ b/translations/texts/plants/bushes/groundocean/toxicseabush/toxiccone.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toxic cone bush."
+      "Eng": "Toxic cone bush.",
+      "Por": "Arbusto em cone tóxico."
     }
   }
 ]
