Atualização translations/texts/plants/bushes/groundocean/toxicseabush/toxiccoral.bush.json

--- a/translations/texts/plants/bushes/groundocean/toxicseabush/toxiccoral.bush.json
+++ b/translations/texts/plants/bushes/groundocean/toxicseabush/toxiccoral.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toxic Coral"
+      "Eng": "Toxic Coral",
+      "Por": "Coral Tóxico"
     }
   }
 ]
