--- a/translations/texts/plants/bushes/groundocean/toxicseabush/toxicoshroom.bush.json
+++ b/translations/texts/plants/bushes/groundocean/toxicseabush/toxicoshroom.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toxic Oshroom"
+      "Eng": "Toxic Oshroom",
+      "Por": "Cogumelo Tóxico"
     }
   }
 ]
