Atualização translations/texts/plants/bushes/groundocean/toxicseabush/toxicseagrass.bush.json

--- a/translations/texts/plants/bushes/groundocean/toxicseabush/toxicseagrass.bush.json
+++ b/translations/texts/plants/bushes/groundocean/toxicseabush/toxicseagrass.bush.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toxic Seagrass"
+      "Eng": "Toxic Seagrass",
+      "Por": "Erva Marinha Tóxica"
     }
   }
 ]
