--- a/translations/texts/plants/grass/shared_shroom/shared_shroom.json
+++ b/translations/texts/plants/grass/shared_shroom/shared_shroom.json
@@ -13,7 +13,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A mushroom."
+      "Eng": "A mushroom.",
+      "Por": "Um cogumelo."
     }
   }
 ]
