--- a/translations/texts/plants/grass/ceiling/decorative/ceilingcurlythorns/ceilingcurlythorns.grass.json
+++ b/translations/texts/plants/grass/ceiling/decorative/ceilingcurlythorns/ceilingcurlythorns.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Curly thorns."
+      "Eng": "Curly thorns.",
+      "Por": "Espinhos encaracolados."
     }
   }
 ]
