--- a/translations/texts/plants/grass/ceiling/decorative/ceilingdirtrocks/ceilingdirtrocks.grass.json
+++ b/translations/texts/plants/grass/ceiling/decorative/ceilingdirtrocks/ceilingdirtrocks.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dirt rocks."
+      "Eng": "Dirt rocks.",
+      "Por": "Rochas de terra."
     }
   }
 ]
