--- a/translations/texts/plants/grass/ceiling/decorative/ceilingfleshbone/ceilingfleshbone.grass.json
+++ b/translations/texts/plants/grass/ceiling/decorative/ceilingfleshbone/ceilingfleshbone.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A grotesque bone."
+      "Eng": "A grotesque bone.",
+      "Por": "Um osso grotesco."
     }
   }
 ]
