Atualização translations/texts/plants/grass/ceiling/decorative/ceilingminipod/ceilingminipod.grass.json

--- a/translations/texts/plants/grass/ceiling/decorative/ceilingminipod/ceilingminipod.grass.json
+++ b/translations/texts/plants/grass/ceiling/decorative/ceilingminipod/ceilingminipod.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A plant-like pod."
+      "Eng": "A plant-like pod.",
+      "Por": "Uma capsula parecida com uma planta."
     }
   }
 ]
