Atualização translations/texts/plants/grass/ceiling/decorative/ceilingnest/ceilingnest.grass.json

--- a/translations/texts/plants/grass/ceiling/decorative/ceilingnest/ceilingnest.grass.json
+++ b/translations/texts/plants/grass/ceiling/decorative/ceilingnest/ceilingnest.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "It appears to be a little nest."
+      "Eng": "It appears to be a little nest.",
+      "Por": "Parece ser um ninho pequeno."
     }
   }
 ]
