--- a/translations/texts/plants/grass/ceiling/decorative/glowceiling/glowceiling.grass.json
+++ b/translations/texts/plants/grass/ceiling/decorative/glowceiling/glowceiling.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A glowing growth."
+      "Eng": "A glowing growth.",
+      "Por": "Um crescimento brilhante."
     }
   }
 ]
