Atualização translations/texts/plants/grass/decorative/shared_crystalflower/shared_crystalflower.grass.json

--- a/translations/texts/plants/grass/decorative/shared_crystalflower/shared_crystalflower.grass.json
+++ b/translations/texts/plants/grass/decorative/shared_crystalflower/shared_crystalflower.grass.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A crystal flower."
+      "Eng": "A crystal flower.",
+      "Por": "Uma flor de cristal."
     }
   }
 ]
