Atualização translations/texts/plants/grass/decorative/shared_fleshplant/shared_fleshplant.grass.json

--- a/translations/texts/plants/grass/decorative/shared_fleshplant/shared_fleshplant.grass.json
+++ b/translations/texts/plants/grass/decorative/shared_fleshplant/shared_fleshplant.grass.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A globule of flesh."
+      "Eng": "A globule of flesh.",
+      "Por": "Um glóbulo de carne."
     }
   }
 ]
