Atualização translations/texts/plants/grass/decorative/shared_handlike/shared_handlike.grass.json

--- a/translations/texts/plants/grass/decorative/shared_handlike/shared_handlike.grass.json
+++ b/translations/texts/plants/grass/decorative/shared_handlike/shared_handlike.grass.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A root that looks like a hand."
+      "Eng": "A root that looks like a hand.",
+      "Por": "Uma raiz que parece uma mão."
     }
   }
 ]
