--- a/translations/texts/plants/grass/ground/shared_.grass.json
+++ b/translations/texts/plants/grass/ground/shared_.grass.json
@@ -55,7 +55,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A beautiful flower."
+      "Eng": "A beautiful flower.",
+      "Por": "Uma flor linda."
     }
   }
 ]
