--- a/translations/texts/plants/grass/ground/drop/eyeplant/eyeplant.grass.json
+++ b/translations/texts/plants/grass/ground/drop/eyeplant/eyeplant.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A gross eyeball flower."
+      "Eng": "A gross eyeball flower.",
+      "Por": "Uma flor de globo ocular nojenta."
     }
   }
 ]
